--- a/app/modules/goals/modules/others/views/othersStarted.html
+++ b/app/modules/goals/modules/others/views/othersStarted.html
@@ -7,10 +7,11 @@
             <h1 class="pull-left slider-description">Others</h1>
             <h2 class="pull-left">Dont have your goal covered in our list? Looks like you are up to something interesting.<span class="nextline">But what is the goal without a plan anyway. Plan away for anything you want,</span><span class="nextline">and let finances not force you to make a compromise.</span></h2>
         </div>                
-        <div class="radio-cover">
+<!--         <div class="radio-cover">
             <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to select my target savings for my goal,show me how much i need to save every month</label>
             <input type="radio" required id="option1Type2" name="opoption1Tion1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type2"><span></span>I want to save a specific amount per month,show me how much will I get when i want to fulfill the goal</label>
         </div>
+         -->
         <div class="col-xs-12">
             <div class="row">
                 <div class="fin-btn-cover started">
