--- a/app/modules/planinvestment/modules/taxsaving/views/taxsavingStarted.html
+++ b/app/modules/planinvestment/modules/taxsaving/views/taxsavingStarted.html
@@ -13,7 +13,7 @@
                 <div class="fin-btn-cover started">
                     <div class="fin-btn-group">
                         <button ng-click="back()" class="fin-link-btn"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
-                        <button ng-disabled="quickInvestForm1.$invalid" class="fin-app-btn fin-orange" click-redirect="/taxsaving">CONTINUE</button>
+                        <button ng-disabled="quickInvestForm1.$invalid" class="fin-app-btn fin-orange" ng-click="$root.selectedCriteria='op1'" click-redirect="/taxsaving">CONTINUE</button>
                     </div>
                 </div>
             </div>
