--- a/less/smartpolio.less
+++ b/less/smartpolio.less
@@ -8,6 +8,7 @@ section{
 			padding-left:6%;
 			padding-right:6%;
 			padding-bottom:4%;
+			min-height: 430px;
 			.schemeTable{
 				margin-bottom:2%;
 			}
