--- a/app/modules/smartportfolio/views/compare.html
+++ b/app/modules/smartportfolio/views/compare.html
@@ -1,6 +1,6 @@
 <section class="recommended">
 	<div class="recommended-table-section">
-		<div class="pull-right indicator-cover retirement" ng-if="selectedGoal == 'retirement'">
+		<div class="pull-right indicator-cover retirement" ng-if="$root.currentGoal == 'retirement'">
 			<div class="typeSwiper">
 		        <div class="image-backdrop"><img src="assets/images/retirementInner.png"></div>
 		        <p>Retirement</p>
@@ -42,7 +42,7 @@
 		    </div> 
 		    <bubble-gen length="6" goal="'Wedding'"></bubble-gen>
 	    </div>
-	    <div class="pull-right indicator-cover others" ng-if="true">
+	    <div class="pull-right indicator-cover others" ng-if="false">
 			<div class="typeSwiper">
 		        <div class="image-backdrop"><img src="assets/images/others.png"></div>
 		        <p>Others</p>
@@ -61,10 +61,10 @@
 								<p>Compare</p>
 							</div>
 							<div class="th">
-								<p>Recommended Scheme Type</p>
+								<p>Recommended Schemes</p>
 							</div>
 							<div class="th">
-								<p>Scheme Sub Type</p>
+								<p>Sub Type</p>
 							</div>
 							<div class="th">
 								<p>3 year Return</p>
@@ -72,9 +72,9 @@
 						</div>
 					</div>
 					<div class="tbody">
-						<div class="tr">
+						<div class="tr" ng-repeat="recommendedScheme in schemeList.scheme">
 							<div class="td">
-								<div class="delete-cover">
+								<div class="delete-cover" ng-click="addToOthers(recommendedScheme, $index)">
 									<div class="image-div">
 										<img src="assets/images/delete.png">
 									</div>
@@ -82,42 +82,18 @@
 							</div>
 							<div class="td">
 								<p><div class="checkbox-cover">
-									<input type="checkbox" id="one" name="type">
-									<label for="one"><span></span></label>
+									<input type="checkbox" id="{{recommendedScheme.id}}" name="type">
+									<label for="{{recommendedScheme.id}}"><span></span></label>
 								</div></p>
 							</div>
 							<div class="td">
-								<p class="schemes">Kotal select Focus Growth</p>
+								<p class="schemes">{{recommendedScheme.fund_name}}</p>
 							</div>
 							<div class="td">
-								<p>Large Cap</p>
+								<p>{{recommendedScheme.category_name}}</p>
 							</div>
 							<div class="td">
-								<p><span class="currency">&#8377;</span>24.77%</p>
-							</div>
-						</div>
-						<div class="tr">
-							<div class="td">
-								<div class="delete-cover">
-									<div class="image-div">
-										<img src="assets/images/delete.png">
-									</div>
-								</div>
-							</div>
-							<div class="td">
-								<p><div class="checkbox-cover">
-									<input type="checkbox" id="one" name="type">
-									<label for="one"><span></span></label>
-								</div></p>
-							</div>
-							<div class="td">
-								<p class="schemes">Kotal select Focus Growth</p>
-							</div>
-							<div class="td">
-								<p>Large Cap</p>
-							</div>
-							<div class="td">
-								<p><span class="currency">&#8377;</span>24.77%</p>
+								<p><span class="currency">&#8377;</span>{{recommendedScheme.three_year_return}}%</p>
 							</div>
 						</div>
 					</div>
@@ -132,10 +108,10 @@
 								<p>Compare</p>
 							</div>
 							<div class="th">
-								<p>Recommended Schemes</p>
+								<p>Other Schemes</p>
 							</div>
 							<div class="th">
-								<p>Scheme Type</p>
+								<p>Sub Type</p>
 							</div>
 							<div class="th">
 								<p>3 year Return</p>
@@ -143,9 +119,9 @@
 						</div>
 					</div>
 					<div class="tbody">
-						<div class="tr">
+						<div class="tr" ng-repeat="otherScheme in schemeList['other recommended']">
 							<div class="td">
-								<div class="add-cover">
+								<div class="add-cover" ng-click="addToRecommended(otherScheme, $index)">
 									<div class="image-div">
 										<img src="assets/images/addbutton.png">
 									</div>
@@ -153,66 +129,18 @@
 							</div>
 							<div class="td">
 								<p><div class="checkbox-cover">
-									<input type="checkbox" id="table2_one" name="type">
-									<label for="table2_one"><span></span></label>
+									<input type="checkbox" id="{{otherScheme.id}}" name="type">
+									<label for="{{otherScheme.id}}"><span></span></label>
 								</div></p>
 							</div>
 							<div class="td">
-								<p class="schemes">Kotal select Focus Growth</p>
+								<p class="schemes">{{otherScheme.fund_name}}</p>
 							</div>
 							<div class="td">
-								<p>Large Cap</p>
+								<p>{{otherScheme.category_name}}</p>
 							</div>
 							<div class="td">
-								<p><span class="currency">&#8377;</span>24.77%</p>
-							</div>
-						</div>
-						<div class="tr">
-							<div class="td">
-								<div class="add-cover">
-									<div class="image-div">
-										<img src="assets/images/addbutton.png">
-									</div>
-								</div>
-							</div>
-							<div class="td">
-								<p><div class="checkbox-cover">
-									<input type="checkbox" id="table2_one" name="type">
-									<label for="table2_one"><span></span></label>
-								</div></p>
-							</div>
-							<div class="td">
-								<p class="schemes">Kotal select Focus Growth</p>
-							</div>
-							<div class="td">
-								<p>Large Cap</p>
-							</div>
-							<div class="td">
-								<p><span class="currency">&#8377;</span>24.77%</p>
-							</div>
-						</div>
-						<div class="tr">
-							<div class="td">
-								<div class="add-cover">
-									<div class="image-div">
-										<img src="assets/images/addbutton.png">
-									</div>
-								</div>
-							</div>
-							<div class="td">
-								<p><div class="checkbox-cover">
-									<input type="checkbox" id="table2_one" name="type">
-									<label for="table2_one"><span></span></label>
-								</div></p>
-							</div>
-							<div class="td">
-								<p class="schemes">Kotal select Focus Growth</p>
-							</div>
-							<div class="td">
-								<p>Large Cap</p>
-							</div>
-							<div class="td">
-								<p><span class="currency">&#8377;</span>24.77%</p>
+								<p><span class="currency">&#8377;</span>{{otherScheme.three_year_return}}%</p>
 							</div>
 						</div>
 					</div>
@@ -220,15 +148,15 @@
 			</div>
 			<div class="tfooter">
 				<div class="fin-btn-group">
-					<button class="pull-left fin-app-btn fin-skip-btn" click-redirect="/compareAndModify">COMPARE</button>
-					<button click-redirect="/educationStarted" class="fin-link-btn pull-left"><span><img src="assets/images/restore.png"></span>RESTORE RECOMMENDATIONS</button>
+					<button class="pull-left fin-app-btn fin-skip-btn" click-redirect="/schemeCompare">COMPARE</button>
+					<button ng-click="getSchemeCount()" class="fin-link-btn pull-left"><span><img src="assets/images/restore.png"></span>RESTORE RECOMMENDATIONS</button>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="fin-btn-group addMargin">
 	    <button click-redirect="/educationStarted" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
-	    <button click-redirect="/dashboard" class="fin-app-btn fin-orange">SAVE AND CONTINUE</button>
+	    <button ng-click="validateGoals(schemeList.scheme)" class="fin-app-btn fin-orange">SAVE AND CONTINUE</button>
 	</div>
 </section>
 
