--- a/app/modules/smartportfolio/views/recommended.html
+++ b/app/modules/smartportfolio/views/recommended.html
@@ -1,6 +1,6 @@
 <section class="recommended">
 	<div class="recommended-table-section">
-		<div class="pull-right indicator-cover retirement" ng-if="selectedGoal == 'retirement'">
+		<div class="pull-right indicator-cover retirement" ng-if="$root.currentGoal == 'retirement'">
 			<div class="typeSwiper">
 		        <div class="image-backdrop"><img src="assets/images/retirementInner.png"></div>
 		        <p>Retirement</p>
@@ -42,18 +42,18 @@
 		    </div> 
 		    <bubble-gen length="6" goal="'Wedding'"></bubble-gen>
 	    </div>
-	    <div class="pull-right indicator-cover others" ng-if="true">
+	    <div class="pull-right indicator-cover others" ng-if="false">
 			<div class="typeSwiper">
 		        <div class="image-backdrop"><img src="assets/images/others.png"></div>
 		        <p>Others</p>
 		    </div> 
 		    <bubble-gen length="6" goal="'Others'"></bubble-gen>
 	    </div>
-		<div class="table-outer-cover schemeTable">
+		<div class="table-outer-cover schemeTable" ng-repeat="eachSchemeType in recommendedSchemes">
 			<div class="thead">
 				<div class="tr">
 					<div class="th">
-						<p>Equity Schemes</p>
+						<p>{{eachSchemeType.key}} Schemes</p>
 					</div>
 					<div class="th">
 						<p>Sub Type</p>
@@ -67,147 +67,28 @@
 				</div>
 			</div>
 			<div class="tbody">
-				<div class="tr">
+				<div class="tr" ng-repeat="eachScheme in eachSchemeType.data">
 					<div class="td">
-						<p class="schemes">Kotal select Focus Growth</p>
+						<p class="schemes">{{eachScheme.fund_name}}</p>
 					</div>
 					<div class="td">
-						<p>Large Cap</p>
+						<p>{{eachScheme.category_name}}</p>
 					</div>
 					<div class="td">
-						<p><span class="currency">&#8377;</span>83,200</p>
+						<p><span class="currency">&#8377;</span>{{eachScheme.sip}}</p>
 					</div>
 					<div class="td">
-						<p><span class="currency">&#8377;</span>93,200</p>
-					</div>
-				</div>
-				<div class="tr">
-					<div class="td">
-						<p class="schemes">SBI BlueChip Fund Regular Growth</p>
-					</div>
-					<div class="td">
-						<p>Large Cap</p>
-					</div>
-					<div class="td">
-						<p><span class="currency">&#8377;</span>83,200</p>
-					</div>
-					<div class="td">
-						<p><span class="currency">&#8377;</span>93,200</p>
+						<p><span class="currency">&#8377;</span>{{eachScheme.lumpsum}}</p>
 					</div>
 				</div>
 			</div>
 			<div class="tfooter">
 				<div class="fin-btn-group">
-					<button class="fin-app-btn fin-orange" click-redirect="/compareAndModify">COMPARE & MODIFY</button>
+					<button class="fin-app-btn fin-orange" ng-click="compareAndModify(eachSchemeType.key)">COMPARE & MODIFY</button>
 				</div>
 			</div>
 		</div>
-		<div class="table-outer-cover schemeTable">
-			<div class="thead">
-				<div class="tr">
-					<div class="th">
-						<p>Debt Schemes</p>
-					</div>
-					<div class="th">
-						<p>Sub Type</p>
-					</div>
-					<div class="th">
-						<p>SIP</p>
-					</div>
-					<div class="th">
-						<p>Lumpsum</p>
-					</div>
-				</div>
-			</div>
-			<div class="tbody">
-				<div class="tr">
-					<div class="td">
-						<p class="schemes">Kotal select Focus Growth</p>
-					</div>
-					<div class="td">
-						<p>Large Cap</p>
-					</div>
-					<div class="td">
-						<p><span class="currency">&#8377;</span>83,200</p>
-					</div>
-					<div class="td">
-						<p><span class="currency">&#8377;</span>93,200</p>
-					</div>
-				</div>
-				<div class="tr">
-					<div class="td">
-						<p class="schemes">SBI BlueChip Fund Regular Growth</p>
-					</div>
-					<div class="td">
-						<p>Large Cap</p>
-					</div>
-					<div class="td">
-						<p><span class="currency">&#8377;</span>83,200</p>
-					</div>
-					<div class="td">
-						<p><span class="currency">&#8377;</span>93,200</p>
-					</div>
-				</div>
-			</div>
-			<div class="tfooter">
-				<div class="fin-btn-group">
-					<button class="fin-app-btn fin-orange" click-redirect="/compareAndModify">COMPARE & MODIFY</button>
-				</div>
-			</div>
-		</div>
-		<div class="table-outer-cover schemeTable">
-			<div class="thead">
-				<div class="tr">
-					<div class="th">
-						<p>ELSS Schemes</p>
-					</div>
-					<div class="th">
-						<p>Sub Type</p>
-					</div>
-					<div class="th">
-						<p>SIP</p>
-					</div>
-					<div class="th">
-						<p>Lumpsum</p>
-					</div>
-				</div>
-			</div>
-			<div class="tbody">
-				<div class="tr">
-					<div class="td">
-						<p class="schemes">Kotal select Focus Growth</p>
-					</div>
-					<div class="td">
-						<p>Large Cap</p>
-					</div>
-					<div class="td">
-						<p><span class="currency">&#8377;</span>83,200</p>
-					</div>
-					<div class="td">
-						<p><span class="currency">&#8377;</span>93,200</p>
-					</div>
-				</div>
-				<div class="tr">
-					<div class="td">
-						<p class="schemes">SBI BlueChip Fund Regular Growth</p>
-					</div>
-					<div class="td">
-						<p>Large Cap</p>
-					</div>
-					<div class="td">
-						<p><span class="currency">&#8377;</span>83,200</p>
-					</div>
-					<div class="td">
-						<p><span class="currency">&#8377;</span>93,200</p>
-					</div>
-				</div>
-			</div>
-			<div class="tfooter">
-				<div class="fin-btn-group">
-					<button class="fin-app-btn fin-orange">COMPARE & MODIFY</button>
-				</div>
-			</div>
-		</div>
+		
 		<div class="fin-btn-group">
 			<button class="fin-app-btn fin-white">SEE PAST PERFORMACE OF ABOVE PORTFOLIO</button>
 		</div>
@@ -221,11 +102,11 @@
 			<div class="calculated-right-cover">
 				<div class="total-text">
 					<span class="placeholder">SIP</span>
-					<p><span class="content">Rs.</span><span class="amount">93,200</span></p>
+					<p><span class="currency">&#8377;</span><span class="amount">{{goalSummary.sip}}</span></p>
 				</div>
 				<div class="total-text">
 					<span class="placeholder">Lumpsum</span>
-					<p><span class="content">Rs.</span><span class="amount">93,200</span></p>
+					<p><span class="currency">&#8377;</span><span class="amount">{{goalSummary.lumpsum}}</span></p>
 				</div>
 			</div>
 		</div>
@@ -235,15 +116,15 @@
 			</div>
 			<div class="calculated-right-cover">
 				<div class="total-text">
-					<p><span class="content">Rs.</span><span class="amount">12,12,400</span></p>
+					<p><span class="currency">&#8377;</span><span class="amount">{{recommendedSchemesObject.total_sum}}</span></p>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="fin-btn-group addMargin">
 	    <button click-redirect="/educationStarted" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
-	    <button click-redirect="/goals" class="fin-app-btn fin-blue">CONTINUE PLANING</button>
-	    <button click-redirect="" class="fin-app-btn fin-orange">CONTINUE TO FUND SELECTION</button>
+	    <button click-redirect="/planInvest" class="fin-app-btn fin-blue">CONTINUE PLANING</button>
+	    <button click-redirect="/investStep1" class="fin-app-btn fin-orange">INVEST AND PAY NOW</button>
 	</div>
 </section>
 
