Ongoing changes for goal graph

--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -868,14 +868,14 @@
                                     <div class="row">
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">20.4 lakh</span></p>
+                                                <h4>Investment till <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalInvestment | ammountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">1.80 crore</span></p>
+                                                <h4>Projected in <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalProjectedCorpus | ammountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                     </div>
