Added functionality to add all goals except others, showing tick on completed goals

--- a/app/modules/goals/modules/education/views/education.html
+++ b/app/modules/goals/modules/education/views/education.html
@@ -1,3 +1,3 @@
 <section class="fadeIn swiper-outer-cover">
-	<swiper swiper-name="education" controller-name="educationController" reduce="true" result="resultObject" callback-fn="appendFormValues(data)" callmodal-fn="showEquityModal()" indicator-end="Education"></swiper>
+	<swiper swiper-name="education" controller-name="educationController" callmodal-fn="showEquityModal()" indicator-end="Education"></swiper>
 </section>
