--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -13,8 +13,8 @@
 				</div>
 				<h2>Retirement</h2>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover" click-redirect="/educationStarted">
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('education')>
+				<div class="goals-cover">
 					<div class="image-div">
 						<img src="assets/images/education.png">
 					</div>
@@ -25,8 +25,8 @@
 				</div>
 				<h2>Education</h2>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover" click-redirect="/propertyStarted">
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('property')>
+				<div class="goals-cover">
 					<div class="image-div">
 						<img src="assets/images/property.png">
 					</div>
@@ -37,8 +37,8 @@
 				</div>
 				<h2>Property</h2>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover" click-redirect="/automobileStarted">
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('automobile')>
+				<div class="goals-cover">
 					<div class="image-div">
 						<img src="assets/images/automobile.png">
 					</div>
@@ -53,8 +53,8 @@
 	</div>
 	<div class="col-xs-12 goal-section">
 		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover" click-redirect="/vacationStarted">
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('vacation')>
+				<div class="goals-cover">
 						<div class="image-div">
 							<img src="assets/images/vacation.png">
 						</div>
@@ -65,8 +65,8 @@
 				</div>
 				<h2>Vacation</h2>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover" click-redirect="/weddingStarted">
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('wedding')>
+				<div class="goals-cover">
 					<div class="image-div">
 						<img src="assets/images/wedding.png">
 					</div>
@@ -77,8 +77,8 @@
 				</div>
 				<h2>Wedding</h2>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover" click-redirect="/othersStarted">
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('events')>
+				<div class="goals-cover">
 					<div class="image-div">
 						<img src="assets/images/others.png">
 					</div>
